# Adapter4QuickJs

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/lybvinci/adapter4quickjs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: testmemory.js
app/src/main/assets/es5test/TestCases/chapter10/10.4/10.4.2/: 10.4.2-2-c-1.js  10.4.2-3-c-1-s.js  10.4.2-3-c-2-s.js
app/src/main/assets/es5test/harness/: sth.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  quickjs_memory_test.cpp  quickjs_memory_test.h  quickjs_test.cpp  quickjs_test.h
app/src/main/cpp/quickjs/: cutils.c  quickjs-libc.c  quickjs.c  quickjs.h  unicode_gen.c
app/src/main/java/com/lybvinci/adapter4quickjs/: JSDelegate.java  MainActivity.java  TestES5.java  TestES6.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lybvinci/adapter4quickjs/: ExampleUnitTest.java
